<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="40dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popupTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/nodeName"
                android:hint="@string/node_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/node_name"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/exitApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_exit"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/createNode"
                    android:background="@null"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>