<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="16dp"
    android:paddingEnd="22dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/session_key"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/resultKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:editable="false"
        android:gravity="top"
        android:hint="@string/session_key"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minLines="4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_close"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/copyKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_copy"
            android:drawableTint="@color/colorAccent"
            android:paddingStart="8dp"
            android:text="@string/btn_copy"
            android:textColor="@color/colorAccent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</LinearLayout>