<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:padding="40dp">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="22dp"
            android:paddingTop="22dp"
            android:paddingEnd="22dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:text="@string/author"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/binVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_github_18"
                    android:drawableTint="@color/ghColor"
                    android:paddingStart="12dp"
                    android:text="@string/btn_github"
                    android:textColor="@color/ghColor"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/closeAboutDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableTint="@color/colorAccent"
                    android:text="@string/btn_close"
                    android:textColor="@color/colorAccent"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>